Fixed Body on mobile view

--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@
 }
 
 body {
-  height: 100vh;
+  width: 100%;
+  min-heigth: 100vh;
   background-color: var(--very-dark-gray);
   display: flex;
   justify-content: center;
@@ -33,6 +34,7 @@ body {
 .cards-container {
   display: flex;
   width: 70%;
+  margin: 10px;
 }
 
 .card {
